fixed little bug in carList Component

--- a/src/app/components/carlist/carlist.component.html
+++ b/src/app/components/carlist/carlist.component.html
@@ -27,7 +27,7 @@
     </div>
     <div class="input-group mb-3" style="width: 60%; position: relative; margin-right: auto; margin-left: auto">
       <div class="input-group-prepend">
-        <span class="input-group-text" id="add-fahrzeug-Sitzplaetze">Username</span>
+        <span class="input-group-text" id="add-fahrzeug-Sitzplaetze">Sitzplätze</span>
       </div>
       <input type="number" class="form-control" placeholder="Sitzplätze" aria-label="Sitzplaetze"
              aria-describedby="add-fahrzeug-sitzplaetze" id="add-fahrzeug-sitzplaetze-input" formControlName="fahrzeugSitzplaetze" required>
@@ -38,7 +38,7 @@
         </div>
       </div>
       <div class="input-group-prepend">
-        <span class="input-group-text" id="add-Stauraum">Password</span>
+        <span class="input-group-text" id="add-Stauraum">Stauraum</span>
       </div>
       <input type="number" class="form-control" placeholder="Stauraum in ㎥" aria-label="Stauraum"
              aria-describedby="add-stauraum" id="add-stauraum-input" formControlName="fahrzeugStauraum" required>
