--- a/src/app/components/profil/loggedin/loggedin.component.html
+++ b/src/app/components/profil/loggedin/loggedin.component.html
@@ -9,6 +9,7 @@
         <button class="btn success btn-light" (click)="navigateToCarList()">Fahrzeuge verwalten</button>
         <button class="btn success btn-light " (click)="logout()">Logout</button>
         <button class="btn danger btn-danger " (click)="deleteAccount()">Account löschen</button><br>
+        <button class="btn danger btn-success " (click)="openRegistrationModal()">Geld aufladen</button><br>
       </div>
     </div>
   </div>
