added car collection, linked cars to user, and updated all affected functions

--- a/src/app/components/carlist/car-item/car-item.component.html
+++ b/src/app/components/carlist/car-item/car-item.component.html
@@ -1,5 +1,5 @@
 <div class="card" style="width: 18rem;">
-  <div class="card-body">
+  <div class="card-body" *ngIf="car">
     <h5 class="card-title">{{car.model}}</h5>
     <p class="card-text">{{car.mark}}</p>
     <p class=" card text">{{car.seats}} Plätze</p>
