--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,9 @@
-<footer class="footer">
-  <div class="containter">
-    <div class="row">
-      <div class="col bg-light pb-2 pl-5 pt-2">©Cargonaut</div>
+<footer class="footer bg-light">
+  <div class="container p-0 m-0  ">
+    <div class="row p-0 m-0">
+      <div class="col m-2">©Cargonaut</div>
     </div>
   </div>
 </footer>
+
+
