--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,18 @@
-<app-alerts></app-alerts>
+<div class="wrapper">
+  <div class="content">
+    <app-alerts></app-alerts>
 
-<app-navbar></app-navbar>
+    <app-navbar></app-navbar>
 
-<router-outlet></router-outlet>
+    <router-outlet></router-outlet>
+  </div>
+
+    <app-footer class="footer"></app-footer>
+
+</div>
 
 
-<app-footer></app-footer>
+
+
 
 
