--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,7 +1,17 @@
 .footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
   height: 40px;
+  padding: 0 0 0 0;
+  margin: 0 0 0 0;
+  width: 100%;
 }
+
+/*.row {
+  width: 100vw;
+}
+
+.col {
+  padding: 0 0 0 0;
+  margin: 0 0 0 0;
+  width: 100%;
+}*/
+
