fixed scroll bug in profil-page

--- a/src/app/components/profil/loggedin/loggedin.component.html
+++ b/src/app/components/profil/loggedin/loggedin.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
   <!--Top menu -->
-  <div class="sidebar">
+  <div class="container">
     <!--profile image & text-->
     <div class="row">
       <div class="col text-center">
