--- a/src/app/components/add-money/load-money-button/load-money-button.component.html
+++ b/src/app/components/add-money/load-money-button/load-money-button.component.html
@@ -1,5 +1,5 @@
 <div class="buttonSize">
-  <div class="shadow p-3 mb-5 bg-white rounded infoheight" style="width: 300px; margin: 2em; margin-top: 5em">
+  <div class="shadow p-3 mb-5 bg-white rounded infoheight" style="margin: 2em; margin-top: 5em">
     <img src="../../../../assets/img/Icons/money_icon.png" class="infoicon"/>
     <h3 style="color: #005B51; text-align: center">{{amount}}</h3>
   </div>
