added updateModal from Kevin, made changes bc of existing bugs and mistakes

--- a/src/app/components/profil/loggedin/loggedin.component.html
+++ b/src/app/components/profil/loggedin/loggedin.component.html
@@ -92,7 +92,7 @@ Top menu
   </div>
 
   <div class="mt-3">
-    <button class=" logoGreenMedium">Profil bearbeiten</button>
+    <button class=" logoGreenMedium" (click)="openUpdateModal()">Profil bearbeiten</button>
   </div>
 
   <div class="mt-3">
