small changes, finished profilepage for now

--- a/src/app/components/profil/loggedin/loggedin.component.html
+++ b/src/app/components/profil/loggedin/loggedin.component.html
@@ -2,7 +2,11 @@
 <div class="d-inline-flex justify-content-around flex-column align-items-center" *ngIf="this.userData.currUser" style="width: 25%; background-color: #F3FBED">
 
   <!--    Items-->
-  <div class="mt-3"><h3 class="h3 font-weight-bold logoGreenDark">{{this.userData.currUser.username}}</h3></div>
+  <div class="mt-3">
+    <h3 class="h3 font-weight-bold logoGreenDark">
+      {{this.userData.currUser.username}}
+    </h3>
+  </div>
 
   <div class="mt-3">
     <svg xmlns="http://www.w3.org/2000/svg" width="10em" viewBox="0 0 240 240">
@@ -36,8 +40,13 @@
 
 
 <div class="d-inline-flex flex-column">
-  <div class="" style="height: 40vh"><h3 class="h3 font-weight-bold logoGreenDark">Du fährst</h3></div>
-  <div class="" style="height: 40vh"><h3 class="h3 font-weight-bold logoGreenDark">Du wirst mitgenommen</h3></div>
+  <div class="" style="height: 40vh">
+    <h3 class="h3 font-weight-bold logoGreenDark">Du fährst</h3>
+  </div>
+
+  <div class="" style="height: 40vh">
+    <h3 class="h3 font-weight-bold logoGreenDark">Du wirst mitgenommen</h3>
+  </div>
 </div>
 
 
