show on offers in profilepage, changed tourlist and toursite, still needs some work in profilepage

--- a/src/app/components/profil/loggedin/loggedin.component.html
+++ b/src/app/components/profil/loggedin/loggedin.component.html
@@ -43,7 +43,7 @@
   <div class="" style="height: 40vh">
     <h3 class="h3 font-weight-bold logoGreenDark">Du fährst</h3>
     <div>
-      <!--<app-tour-list></app-tour-list>-->
+      <app-tour-list [usedList]="ownOffers"></app-tour-list>
     </div>
   </div>
 
