--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 
     <app-navbar></app-navbar>
 
-    <router-outlet></router-outlet>
+<!--    <router-outlet></router-outlet>-->
   </div>
 
     <app-footer class="footer"></app-footer>
