--- a/src/app/components/main-page/suchleiste/suchleiste.component.css
+++ b/src/app/components/main-page/suchleiste/suchleiste.component.css
@@ -4,6 +4,7 @@ header.masthead {
   background-color: #343a40;
   background: url("../../../../assets/img/SVG/Zeichenflache_4.svg") no-repeat center center;
   background-size: cover;
+  z-index: 10;
   padding-top: 8rem;
   padding-bottom: 8rem;
   height: 40em; /*55em für qhdBildschirm*/
