--- a/src/app/components/profil/loggedin/loggedin.component.html
+++ b/src/app/components/profil/loggedin/loggedin.component.html
@@ -40,7 +40,7 @@
 
 
 <div class="d-inline-flex flex-column">
-  <div class="" style="height: 40vh">
+  <div class="" style="height: 40vh; width: 60vh">
     <h3 class="h3 font-weight-bold logoGreenDark">Du fährst</h3>
     <div>
       <app-tour-list [usedList]="ownOffers"></app-tour-list>
