--- a/src/app/components/tour-list/tour-list.component.css
+++ b/src/app/components/tour-list/tour-list.component.css
@@ -1,5 +1,6 @@
 .scrolling-wrapper{
   overflow-x: auto;
+  overflow-y: auto ;
 }
 
 html {
@@ -7,6 +8,16 @@ html {
   overflow-x: hidden;
 }
 ::-webkit-scrollbar {
-  width: 0;  /* Remove scrollbar space */
-  background: transparent;  /* Optional: just make scrollbar invisible */
+  width: 12px;
+  height: 12px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #005B51;
+  border-radius: 10px;
 }
