--- a/src/app/components/tour-list/tour-list.component.html
+++ b/src/app/components/tour-list/tour-list.component.html
@@ -1,6 +1,6 @@
-<div class="container-fluid" *ngFor="let tour of usedList; let i = index">
+<div class="container-fluid d-flex">
   <div class="row flex-row flex-nowrap scrolling-wrapper">
-    <div class="col-12">
+    <div class="col-7" *ngFor="let tour of usedList; let i = index">
       <app-tour-card [tour]="tour"></app-tour-card>
     </div>
   </div>
