--- a/src/app/components/profil/loggedin/loggedin.component.html
+++ b/src/app/components/profil/loggedin/loggedin.component.html
@@ -41,7 +41,7 @@
 
 <div class="d-inline-flex flex-column">
   <div class="" style="height: 40vh">
-    <h3 class="h3 font-weight-bold logoGreenDark">Du fährst</h3>
+    <h3 class="h3 font-weight-bold logoGreenDark ml-3">Du fährst</h3>
     <div>
       <app-tour-list [usedList]="ownOffers"></app-tour-list>
       <div class="container">
@@ -57,7 +57,7 @@
   </div>
 
   <div class="" style="height: 40vh">
-    <h3 class="h3 font-weight-bold logoGreenDark">Du wirst mitgenommen</h3>
+    <h3 class="h3 font-weight-bold logoGreenDark ml-3">Du wirst mitgenommen</h3>
     <div>
       <app-tour-list [usedList]="passengerTours"></app-tour-list>
       <div class="container">
