--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,3 +1,119 @@
-.navbar {
-  height: 100px;
+.h5 {
+  font-family: Arial, serif;
+  font-style: italic;
 }
+
+button {
+  border: none;
+  background-color: transparent;
+}
+
+.buttons {
+  color: #ffffff;
+}
+
+.navbarTest {
+
+}
+
+.flexi {
+  display: flex;
+  gap: 3rem;
+}
+
+nav {
+  z-index: 1000;
+  box-shadow: 0 5px 10px lightgray;
+}
+
+/* header on default */
+.primary-header {
+  align-items: center;
+  justify-content: space-between;
+  display: none;
+  z-index: 1000;
+  box-shadow: 0 5px 10px lightgray;
+}
+
+/* button on default */
+.mobile-nav-toggle {
+  display: none;
+}
+
+/* logo on default */
+.logo {
+  margin: 2rem;
+  width: 15em;
+}
+
+/* Navigation on default */
+.primary-navigation {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  background: hsl(0, 0%, 0%, 0.75);
+}
+
+.primary-navigation a {
+  text-decoration: none;
+}
+
+/* if blur is supported */
+@supports (backdrop-filter: blur(1rem)) {
+  .primary-navigation {
+    background: hsl(0, 0%, 100%, 0.6);
+    backdrop-filter: blur(1rem);
+  }
+
+  .buttons {
+    color: #005B51;
+  }
+}
+
+
+@media (max-width: 75em) {
+  .primary-header {
+    display: block;
+  }
+
+  a:hover {
+    cursor: pointer;
+  }
+
+  .navbarTest {
+    display: none;
+  }
+
+  .primary-navigation {
+    z-index: 1000;
+    position: fixed;
+    inset: 0 0 0 60%;
+    flex-direction: column;
+    padding: min(30vh, 8rem) 2rem;
+    transform: translateX(100%);
+    transition: transform 350ms ease-out;
+  }
+
+  .primary-navigation[data-visible="true"] {
+    transform: translateX(0%);
+  }
+
+  .mobile-nav-toggle {
+    display: block;
+    position: absolute;
+    width: 5vw;
+    border: 0;
+    aspect-ratio: 1;
+    top: 4em;
+    right: 1em;
+    z-index: 10000;
+    background: transparent url("src/assets/img/SVG/ic_menu_24px.svg") no-repeat;
+  }
+
+
+  .mobile-nav-toggle[aria-expanded="true"] {
+    background-image: url("src/assets/img/SVG/ic_close_24px.svg");
+  }
+
+}
+
