--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,42 +1,181 @@
-<nav class="navbar navbar-expand-xl navbar-light bg-light py-2">
-  <div class="container-fluid" style="margin-left: 15em; margin-right:15em">
-    <button style="border: none;  background-color: Transparent;" (click)="navigateToMainPage()">
-      <img src ="../../../assets/img/SVG/LKW.svg" width="180" height="75"/>
+<div class="navbarTest">
+
+
+<nav class="d-flex justify-content-between navbar-light bg-light">
+    <div class="d-inline-flex align-items-center">
+      <button (click)="navigateToMainPage()" class="logo">
+        <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" xmlns:xlink="http://www.w3.org/1999/xlink"
+             viewBox="0 0 309 90">
+          <defs>
+            <clipPath id="clip-path">
+              <rect id="Rectangle_1" data-name="Rectangle 1" width="309" height="90" transform="translate(0.445 0.379)"
+                    fill="#fff" stroke="#707070" stroke-width="1"/>
+            </clipPath>
+          </defs>
+          <g id="Mask_Group_1" data-name="Mask Group 1" transform="translate(-0.445 -0.379)"
+             clip-path="url(#clip-path)">
+            <g id="semi_androidMyCargonaut" transform="translate(43.634 0.174)">
+              <g id="Truck">
+                <path id="Path_9" data-name="Path 9" d="M480.536,338.77l-.74,2.914h142.77"
+                      transform="translate(-402.617 -285.1)" fill="#005b52"/>
+                <path id="Path_10" data-name="Path 10" d="M489.733,265.191l-.74,2.914,142.77,1.7"
+                      transform="translate(-410.335 -223.178)" fill="#005b52"/>
+                <path id="Path_11" data-name="Path 11" d="M494.332,197.744l-.74,2.914,142.03,3.157"
+                      transform="translate(-414.194 -166.416)" fill="#005b52"/>
+                <path id="Path_12" data-name="Path 12" d="M503.53,122.632l-.74,2.914L643.34,130.4"
+                      transform="translate(-421.912 -103.204)" fill="#005b52"/>
+                <path id="Path_13" data-name="Path 13" d="M511.194,50.586l-.74,2.914,140.057,7.043"
+                      transform="translate(-428.343 -42.571)" fill="#005b52"/>
+                <path id="Path_14" data-name="Path 14" d="M427.678,56.584h4.932L439.267,0h-4.685Z"
+                      transform="translate(-358.882)" fill="#005b52"/>
+                <path id="Path_15" data-name="Path 15"
+                      d="M503.5,490.256l6.411-39.585-12.822.243s-9.863.486-16.028,4.614-7.4,8.257-7.4,8.257l21.946-.486-18.74-.729s1.906-4.291,7.891-6.557a43.213,43.213,0,0,1,12.082-2.671h9.37Z"
+                      transform="translate(-436.924 -442.657)" fill="#005b52"/>
+                <path id="Path_16" data-name="Path 16"
+                      d="M303.949,542.645l-23.425.486a9.868,9.868,0,0,0-9.37,6.314,49.484,49.484,0,0,0-2.712,7.286l-6.411.243s-8.137-.243-13.069,8.743c-3.672,6.688-3.7,10.685-3.7,10.685l23.672.243s2.712-8.5,9.123-8.5c9.37,0,11.836,7.043,11.836,7.043s-.74-8.985-12.082-8.985c-7.644,0-9.617,7.528-9.617,7.528H250.441s1.726-8.985,5.425-11.414a14.839,14.839,0,0,1,7.4-2.428l31.069-.971,2.466-12.143-18.987.486a3.717,3.717,0,0,1,2.466-2.671,21.993,21.993,0,0,1,4.438-.486Z"
+                      transform="translate(-245.263 -520.06)" fill="#005b52"/>
+              </g>
+              <text id="Cargonaut" transform="translate(70.49 82.13)" fill="#005b52" font-size="29"
+                    font-family="Helvetica-LightOblique, Helvetica" font-weight="300" font-style="oblique">
+                <tspan x="0" y="0" letter-spacing="0.02em">C</tspan>
+                <tspan y="0">a</tspan>
+                <tspan y="0" letter-spacing="-0.02em">r</tspan>
+                <tspan y="0">go</tspan>
+                <tspan y="0" letter-spacing="-0.01em">n</tspan>
+                <tspan y="0">aut</tspan>
+              </text>
+              <text id="My" transform="translate(15.379 81.291)" fill="#005b52" font-size="28"
+                    font-family="BrushScriptMT, Brush Script MT">
+                <tspan x="0" y="0">My</tspan>
+              </text>
+            </g>
+          </g>
+        </svg>
+      </button>
+      <button class="h5 logoGreenDark pl-0 m-2" (click)="navigateToTours()">Mitfahrgelegenheit</button>
+      <button class="h5 logoGreenDark m-2">Meine Angebote & Anfragen</button>
+    </div>
+
+    <div class="d-inline-flex align-items-center">
+      <button class="" (click)="navigateToCreateTourPage()" style="max-width: 2.5em">
+        <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 28 28">
+          <path id="ic_add_circle_outline_24px"
+                d="M17.4,9H14.6v5.6H9v2.8h5.6V23h2.8V17.4H23V14.6H17.4ZM16,2A14,14,0,1,0,30,16,14.005,14.005,0,0,0,16,2Zm0,25.2A11.2,11.2,0,1,1,27.2,16,11.215,11.215,0,0,1,16,27.2Z"
+                transform="translate(-2 -2)" fill="#208479"/>
+        </svg>
+      </button>
+      <button class="" (click)="navigateToCreateTourPage()">
+        <span class="h5 logoGreenDark">Angebote & Anfragen erstellen</span>
+      </button>
+      <button class="ml-3 mr-5" (click)="navigateToUser()" style="max-width: 3em">
+        <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 40 40">
+          <path id="ic_account_circle_24px"
+                d="M22,2A20,20,0,1,0,42,22,20.007,20.007,0,0,0,22,2Zm0,6a6,6,0,1,1-6,6A5.992,5.992,0,0,1,22,8Zm0,28.4a14.4,14.4,0,0,1-12-6.44c.06-3.98,8-6.16,12-6.16,3.98,0,11.94,2.18,12,6.16A14.4,14.4,0,0,1,22,36.4Z"
+                transform="translate(-2 -2)" fill="#208479"/>
+        </svg>
+      </button>
+    </div>
+
+  </nav>
+</div>
+
+
+  <div class="primary-header flexi bg-light">
+
+    <div>
+      <svg class="logo" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%"
+           xmlns:xlink="http://www.w3.org/1999/xlink"
+           viewBox="0 0 309 90">
+        <defs>
+          <clipPath id="clip-path">
+            <rect id="Rectangle_1" data-name="Rectangle 1" width="309" height="90" transform="translate(0.445 0.379)"
+                  fill="#fff" stroke="#707070" stroke-width="1"/>
+          </clipPath>
+        </defs>
+        <g id="Mask_Group_1" data-name="Mask Group 1" transform="translate(-0.445 -0.379)"
+           clip-path="url(#clip-path)">
+          <g id="semi_androidMyCargonaut" transform="translate(43.634 0.174)">
+            <g id="Truck">
+              <path id="Path_9" data-name="Path 9" d="M480.536,338.77l-.74,2.914h142.77"
+                    transform="translate(-402.617 -285.1)" fill="#005b52"/>
+              <path id="Path_10" data-name="Path 10" d="M489.733,265.191l-.74,2.914,142.77,1.7"
+                    transform="translate(-410.335 -223.178)" fill="#005b52"/>
+              <path id="Path_11" data-name="Path 11" d="M494.332,197.744l-.74,2.914,142.03,3.157"
+                    transform="translate(-414.194 -166.416)" fill="#005b52"/>
+              <path id="Path_12" data-name="Path 12" d="M503.53,122.632l-.74,2.914L643.34,130.4"
+                    transform="translate(-421.912 -103.204)" fill="#005b52"/>
+              <path id="Path_13" data-name="Path 13" d="M511.194,50.586l-.74,2.914,140.057,7.043"
+                    transform="translate(-428.343 -42.571)" fill="#005b52"/>
+              <path id="Path_14" data-name="Path 14" d="M427.678,56.584h4.932L439.267,0h-4.685Z"
+                    transform="translate(-358.882)" fill="#005b52"/>
+              <path id="Path_15" data-name="Path 15"
+                    d="M503.5,490.256l6.411-39.585-12.822.243s-9.863.486-16.028,4.614-7.4,8.257-7.4,8.257l21.946-.486-18.74-.729s1.906-4.291,7.891-6.557a43.213,43.213,0,0,1,12.082-2.671h9.37Z"
+                    transform="translate(-436.924 -442.657)" fill="#005b52"/>
+              <path id="Path_16" data-name="Path 16"
+                    d="M303.949,542.645l-23.425.486a9.868,9.868,0,0,0-9.37,6.314,49.484,49.484,0,0,0-2.712,7.286l-6.411.243s-8.137-.243-13.069,8.743c-3.672,6.688-3.7,10.685-3.7,10.685l23.672.243s2.712-8.5,9.123-8.5c9.37,0,11.836,7.043,11.836,7.043s-.74-8.985-12.082-8.985c-7.644,0-9.617,7.528-9.617,7.528H250.441s1.726-8.985,5.425-11.414a14.839,14.839,0,0,1,7.4-2.428l31.069-.971,2.466-12.143-18.987.486a3.717,3.717,0,0,1,2.466-2.671,21.993,21.993,0,0,1,4.438-.486Z"
+                    transform="translate(-245.263 -520.06)" fill="#005b52"/>
+            </g>
+            <text id="Cargonaut" transform="translate(70.49 82.13)" fill="#005b52" font-size="29"
+                  font-family="Helvetica-LightOblique, Helvetica" font-weight="300" font-style="oblique">
+              <tspan x="0" y="0" letter-spacing="0.02em">C</tspan>
+              <tspan y="0">a</tspan>
+              <tspan y="0" letter-spacing="-0.02em">r</tspan>
+              <tspan y="0">go</tspan>
+              <tspan y="0" letter-spacing="-0.01em">n</tspan>
+              <tspan y="0">aut</tspan>
+            </text>
+            <text id="My" transform="translate(15.379 81.291)" fill="#005b52" font-size="28"
+                  font-family="BrushScriptMT, Brush Script MT">
+              <tspan x="0" y="0">My</tspan>
+            </text>
+          </g>
+        </g>
+      </svg>
+    </div>
+
+
+    <button #mobile (click)="mobileToggle(primaryNavigation, mobile)"
+            class="mobile-nav-toggle"
+            aria-controls="primary-navigation"
+            aria-expanded="false">
+      <span class="sr-only">Menu</span>
     </button>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse mr-auto" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li class="nav-item">
-          <button style="border: none;  background-color: Transparent;">
-            <a class="nav-link active" aria-current="page" style="color: #005B51; font-size: 20px; font-style: italic; font-family: Arial" (click)="navigateToTours()">Mitfahrgelegenheit</a>
-          </button>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" href="#" style="color: #005B51; font-size: 20px; font-style: italic; font-family: Arial">Meine Angebote & Anfragen</a>
-        </li>
-      </ul>
-      <ul class="navbar-nav me-auto my-2 my-lg-0">
-        <li class="nav-item" style="margin-right: 14px" href="#">
-          <button style="border: none;  background-color: Transparent;">
-            <img src="../../../assets/img/Icons/search_icon.png" width="30" height="30" style="float: left; margin-top: 7px">
-            <a class="nav-link active" style="color: #005B51;float: left; font-size: 20px; font-style: italic; font-family: Arial">Suchen</a>
-          </button>
-        </li>
-        <li class="nav-item" style="margin-right: 12px">
-          <button style="border: none;  background-color: Transparent;" (click)="navigateToCreateTourPage()">
-            <img src="../../../assets/img/Icons/add_icon.png" width="30" height="30" style="float: left; margin-top: 7px">
-            <a class="nav-link active" style="color: #005B51;float: left; font-size: 20px; font-style: italic; font-family: Arial">Angebot & Anfrage erstellen</a>
-          </button>
+
+
+    <nav>
+      <ul #primaryNavigation id="primary-navigation" class="primary-navigation flexi"
+      data-visible="false">
+        <li>
+          <a class="buttons" (click)="navigateToMainPage()">Startseite</a>
         </li>
         <li>
-          <button style="border: none;  background-color: Transparent;" (click)="navigateToUser()">
-            <img src="../../../assets/img/Icons/user_icon.png" width="43" height="43" style="float: left;">
-          </button>
+          <a class="buttons" (click)="navigateToTours()">Mitfahrgelegenheiten</a>
+        </li>
+        <li>
+          <a  class="buttons" href="">Meine Angebote und Anfragen</a>
+        </li>
+        <li>
+          <a  class="buttons" (click)="navigateToCreateTourPage()">Angebote und Anfragen erstellen</a>
+        </li>
+        <li>
+          <a class="buttons" (click)="navigateToUser()">Profil</a>
         </li>
       </ul>
-
-    </div>
+    </nav>
   </div>
-</nav>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
