added statistics for user

--- a/src/app/components/stranger-profile/stranger-profile.component.html
+++ b/src/app/components/stranger-profile/stranger-profile.component.html
@@ -1,16 +1,28 @@
-<div class="d-flex justify-content-center m-5">
+<div class="d-flex justify-content-center profile-header">
 
-  <div class="d-inline-flex flex-wrap">
-    <svg class="profilePic"></svg>
+
+  <div class="d-flex justify-content-center m-5 profile-info">
+
+    <div class="d-inline-flex">
+      <svg class="profilePic"></svg>
+    </div>
+
+    <div class="d-inline-flex flex-column">
+      <div class="h5">{{this.username}}</div>
+      <div class=""><span>{{this.firstname}}</span> <span>{{this.lastname}}</span></div>
+      <div class="">{{this.age}}</div>
+      <div class="">{{this.gender}}</div>
+      <div class="" *ngIf="this.evaluation !== -1; else noEval">{{this.evaluation}}</div>
+      <ng-template #noEval class="">Not evaluated yet</ng-template>
+    </div>
+
   </div>
 
-  <div class="d-inline-flex flex-column">
-    <div class="h5">{{this.username}}</div>
-    <div class=""><span>{{this.firstname}}</span> <span>{{this.lastname}}</span></div>
-    <div class="">{{this.age}}</div>
-    <div class="">{{this.gender}}</div>
-    <div class="" *ngIf="this.evaluation !== -1; else noEval">{{this.evaluation}}</div>
-    <ng-template #noEval class="">Not evaluated yet</ng-template>
+  <div class="d-inline-flex flex-column m-5">
+    <div class="h5">Statistik</div>
+    <div class="">Ausgeführte Fahrten: 2</div>
+    <div class="">Mitgefahren: 3</div>
+    <div class="">Offene Fahrten: 4</div>
+    <div class="">Offene Anfragen: 5</div>
   </div>
-
 </div>
