WIP: KMSWS21T04-97 - Use Tour-list in ProfilePage (#33)
* Initial commit for this branch

* show on offers in profilepage, changed tourlist and toursite, still needs some work in profilepage

* first attempt to get list horizontal in profilePage

* cards are now horizontal and the user sees own offers or booked tours, still need better styling

* small changes for better design

* last small changes of titles for lists, Still has Design Issues

--- a/src/app/components/profil/loggedin/loggedin.component.html
+++ b/src/app/components/profil/loggedin/loggedin.component.html
@@ -41,13 +41,36 @@
 
 <div class="d-inline-flex flex-column">
   <div class="" style="height: 40vh">
-    <h3 class="h3 font-weight-bold logoGreenDark">Du fährst</h3>
+    <h3 class="h3 font-weight-bold logoGreenDark ml-3">Du fährst</h3>
+    <div>
+      <app-tour-list [usedList]="ownOffers"></app-tour-list>
+      <div class="container">
+        <div class="row">
+          <div *ngIf="ownOffers.length === 0" class="card col-7 border-0 mb-3" style="max-width: 600px; height: 25vh">
+            <div class="card-body rounded shadow mt-4 bg-white border-0">
+              <h4 class="h4 font-weight-bold logoGreenDark">Du hast noch keine Fahrten gebucht!</h4>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
   <div class="" style="height: 40vh">
-    <h3 class="h3 font-weight-bold logoGreenDark">Du wirst mitgenommen</h3>
+    <h3 class="h3 font-weight-bold logoGreenDark ml-3">Du wirst mitgenommen</h3>
+    <div>
+      <app-tour-list [usedList]="passengerTours"></app-tour-list>
+      <div class="container">
+        <div class="row">
+          <div *ngIf="passengerTours.length === 0" class="card col-7 border-0 mb-3" style="max-width: 600px; height: 25vh">
+            <div class="card-body rounded shadow mt-4 bg-white border-0">
+              <h4 class="h4 font-weight-bold logoGreenDark">Du hast noch keine Fahrten gebucht!</h4>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
-
 
 <div class="resp"></div>
