--- a/src/app/components/stranger-profile/stranger-profile.component.html
+++ b/src/app/components/stranger-profile/stranger-profile.component.html
@@ -26,3 +26,103 @@
     <div class="">Offene Anfragen: 5</div>
   </div>
 </div>
+
+
+
+
+<div class="tours">
+
+
+  <div class="">
+    <h2 class="logoGreenDark">Seine Angebote</h2>
+  </div>
+
+  <div class="container-fluid">
+    <div class="row flex-row flex-nowrap scrolling-wrapper">
+      <div class="col-4">
+        <app-tour-card></app-tour-card>
+
+      </div>
+      <div class="col-6">
+        <app-tour-card></app-tour-card>
+
+      </div>
+      <div class="col-6">
+        <app-tour-card></app-tour-card>
+
+      </div>
+      <div class="col-6">
+        <app-tour-card></app-tour-card>
+
+      </div>
+      <div class="col-6">
+        <app-tour-card></app-tour-card>
+
+      </div>
+      <div class="col-6">
+        <app-tour-card></app-tour-card>
+
+      </div>
+      <div class="col-6">
+        <app-tour-card></app-tour-card>
+
+      </div>
+      <div class="col-6">
+        <app-tour-card></app-tour-card>
+
+      </div>
+    </div>
+  </div>
+
+
+</div>
+
+
+
+<div class="tours">
+
+
+  <div class="">
+    <h2 class="logoGreenDark">Seine Anfragen</h2>
+  </div>
+
+  <div class="container-fluid">
+    <div class="row flex-row flex-nowrap scrolling-wrapper">
+      <div class="col-4">
+        <app-tour-card></app-tour-card>
+
+      </div>
+      <div class="col-6">
+        <app-tour-card></app-tour-card>
+
+      </div>
+      <div class="col-6">
+        <app-tour-card></app-tour-card>
+
+      </div>
+      <div class="col-6">
+        <app-tour-card></app-tour-card>
+
+      </div>
+      <div class="col-6">
+        <app-tour-card></app-tour-card>
+
+      </div>
+      <div class="col-6">
+        <app-tour-card></app-tour-card>
+
+      </div>
+      <div class="col-6">
+        <app-tour-card></app-tour-card>
+
+      </div>
+      <div class="col-6">
+        <app-tour-card></app-tour-card>
+
+      </div>
+    </div>
+  </div>
+
+
+</div>
+
